--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./styles.css">
     <title>Personal Portfolio</title>
   </head>
@@ -19,27 +20,27 @@
         <section id="projects">
           <div>
             <a href="">
-                <img src="">
+                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
                 <p>First Project</p>
             </a>
             <a href="">
-                <img src="">
+                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
+                <p>Second Project</p>
+            </a>
+            <a href="">
+                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
+                <p>Third Project</p>
+            </a>
+            <a href="">
+                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
+                <p>Fourth Project</p>
+            </a>
+            <a href="">
+                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
                 <p>First Project</p>
             </a>
             <a href="">
-                <img src="">
-                <p>First Project</p>
-            </a>
-            <a href="">
-                <img src="">
-                <p>First Project</p>
-            </a>
-            <a href="">
-                <img src="">
-                <p>First Project</p>
-            </a>
-            <a href="">
-                <img src="">
+                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
                 <p>First Project</p>
             </a>
           </div>
