--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -4,50 +4,95 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./styles.css">
+    <!--Icon Libary-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Personal Portfolio</title>
   </head>
   <body>
     <main>
-        <nav id="navbar">
+        <nav>
             <a href="#welcome-section">About</a>
             <a href="#projects">Work</a>
             <a href="#profile-link">Contact</a>
         </nav>
         <section id="welcome-section">
-            <h1>Hey I'm a Mimic</h1>
-            <p>a web developer</p>
+            <h1>Hey, I'm Maurice</h1>
+            <p><em>a web developer</em></p>
         </section>
         <section id="projects">
+          <h2>These are some of my projects</h2>
           <div>
-            <a href="">
-                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
+            <div>
+              <a href="https://github.com/BlSaFl/Praktikum-Repo/tree/main/Survey%20Form">
+                <img src="resources/survey-form.png">
                 <p>First Project</p>
-            </a>
-            <a href="">
-                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
+              </a>
+            </div>
+            <div>
+              <a href="https://github.com/BlSaFl/Praktikum-Repo/tree/main/Tribute%20Page">
+                <img src="resources/tribute-page.png">
                 <p>Second Project</p>
-            </a>
-            <a href="">
-                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
+              </a>
+            </div>
+            <div>
+              <a href="https://github.com/BlSaFl/Praktikum-Repo/tree/main/Technical%20Documentation%20Page">
+                <img src="resources/tec-doc-page.png">
                 <p>Third Project</p>
-            </a>
-            <a href="">
-                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
+              </a>
+            </div>
+            <div>
+              <a href="https://github.com/BlSaFl/Praktikum-Repo/tree/main/Product%20Landing%20Page">
+                <img src="resources/product-landing-page.png">
                 <p>Fourth Project</p>
-            </a>
-            <a href="">
-                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
+              </a>
+            </div>
+            <div>
+              <a href="https://github.com/BlSaFl/Praktikum-Repo/tree/main/Tribute%20Page">
+                <img src="resources/tribute-page.png">
                 <p>First Project</p>
-            </a>
-            <a href="">
-                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
+              </a>
+            </div>
+            <div>
+              <a href="https://github.com/BlSaFl/Praktikum-Repo/tree/main/Tribute%20Page">
+                <img src="resources/tribute-page.png">
                 <p>First Project</p>
-            </a>
+              </a>
+            </div>
+            <div>
+              <a href="https://github.com/BlSaFl/Praktikum-Repo/tree/main/Tribute%20Page">
+                <img src="resources/tribute-page.png">
+                <p>First Project</p>
+              </a>
+            </div>
           </div>
         </section>
-        <section>
-            <a id="profile-link" href="">Profile Link</a>
+        <section id="profile-link">
+            <h1>Let's work together...</h1>
+            <p>Hier könnte Ihre Werbung stehen</p>
+            <div>
+              <a href="https://steamcommunity.com/profiles/76561198086015794" target="_blank">
+                <i class="fa fa-steam"></i>
+                Steam
+              </a>
+              <a href="https://www.amazon.de/s?k=rgb+keyboard&__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3BT3PV41L5GJU&sprefix=rgb+keyboard%2Caps%2C94&ref=nb_sb_noss_1"
+                target="_blank">
+                <i class="fa fa-amazon"></i>
+                10% Schneller Schreiben
+              </a>
+              <a href="https://github.com/BlSaFl" target="_blank">
+                <i class="fa fa-github"></i>
+                Github Profile
+              </a>
+              <a href="https://www.instagram.com/mightyvolt">
+                <i class="fa fa-twitter"></i>
+                Produktplatzierung
+              </a>
+            </div>
         </section>
+        <footer>
+          <p>*Keine Garantie auf ästhetische Ansicht</p>
+          <p>Created by Florian Wolter</p>
+        </footer>
     </main>
   </body>
 </html>
